--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "name": "map",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "3.5",
+    "jquery": "^3.3.1",
+    "leaflet": "^1.3.1"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "2.11.2"
+  }
 }
