--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "crypto": "^1.0.1",
     "jquery": "^3.3.1",
-    "leaflet": "^1.3.1"
+    "js": "^0.1.0",
+    "leaflet": "^1.3.1",
+    "require": "^2.4.20",
+    "require.js": "^1.0.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
