--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jquery": "^3.3.1",
     "leaflet": "^1.3.1",
     "object-hash": "^1.3.0",
+    "package.json": "^2.0.1",
     "requirejs": "^2.3.5"
   },
   "devDependencies": {
