--- a/package.json
+++ b/package.json
@@ -5,16 +5,10 @@
     "@rails/webpacker": "3.5",
     "crypto": "^1.0.1",
     "jquery": "^3.3.1",
-<<<<<<< HEAD
-    "js": "^0.1.0",
-    "leaflet": "^1.3.1",
-    "require": "^2.4.20",
-    "require.js": "^1.0.0"
-=======
     "leaflet": "^1.3.1",
     "object-hash": "^1.3.0",
+    "package.json": "^2.0.1",
     "requirejs": "^2.3.5"
->>>>>>> 6c7573cb067962d319aa5b002eb81c157f91e03c
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
