--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "jquery": "^3.3.1",
     "leaflet": "^1.3.1",
     "package.json": "^2.0.1",
+    "yarn": "^1.7.0",
     "yarn.lock": "^0.0.1-security"
   },
   "devDependencies": {
