--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "leaflet": "^1.3.1",
     "package.json": "^2.0.1",
     "yarn": "^1.7.0",
+    "yarn-install": "^1.0.0",
     "yarn.lock": "^0.0.1-security"
   },
   "devDependencies": {
