--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "@rails/webpacker": "3.5",
     "jquery": "^3.3.1",
     "leaflet": "^1.3.1",
+    "pack": "^2.1.0",
     "package.json": "^2.0.1",
+    "tab": "^1.0.0",
     "yarn": "^1.7.0",
     "yarn-install": "^1.0.0",
     "yarn.lock": "^0.0.1-security"
